Modification pour faire marcher sur vm